--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
     <%= javascript_include_tag "swfobject" %>
 
    <%= javascript_include_tag "ddtabmenu" %>
-    <%= javascript_include_tag "jquery-1.5.2.min" %>
-    <%= javascript_include_tag "jquery-ui.min" %>
-    <%= javascript_include_tag "jquery.min" %>
-    <%= javascript_include_tag "jquery" %>
+    <%#= javascript_include_tag "jquery-1.5.2.min" %>
+    <%#= javascript_include_tag "jquery-ui.min" %>
+    <%#= javascript_include_tag "jquery.min" %>
+    <%#= javascript_include_tag "jquery" %>
 
 
     <%= csrf_meta_tag %>
@@ -63,26 +63,48 @@ ddtabmenu.definemenu("ddtabs3", 0) //initialize Tab Menu #3 with 2nd tab selecte
 
 
    <div class="header_logo_nav">
-      <div class="header_nav">
-                  <div class="header_nav_l_corner"></div>
-                  <div class="header_nav_c_corner">
-			 <%= link_to "Overview", payments_path , :style => "border-left-style:none;" %>
-                         <%= link_to "Payees", payees_path %>
-                         <%= link_to "Recuring Payments", new_payment_path ,:style => "padding-top:5px; height:35px;" %>
-                         <%= link_to "My Financial Info", new_deposit_path ,:style=>"padding-top: 6px; height: 34px; width:90px;"%>
-                         <%= link_to "Money Momma Coupons", transactions_path ,:style=>"padding-top:5px; height:35px; width:92px;"%>
-                         <%= link_to "Email & Alerts", email_alert_users_path , :style => "border-right-style:none;" %>
 
+
+
+
+
+   
+                  <div id="ddtabs3" class="solidblockmenu">
+                 
+			<ul>
+                            <li><%= link_to "Money Momma  Budgeting", payments_path , :rel => "sb1" %></li>
+                            <li><a href="#">Ask Momma</a></li>
+                            <li> <%= link_to "Money Momma Coupons", transactions_path %></li>
+                            <li> <%= link_to "Email Settings", email_alert_users_path , :style => "border-right:none;" %></li>
+
+                        </ul>
+
+                  
 
                   </div>
 
-                  <div class="header_nav_r_corner"></div>
-     </div>
-   </div>
+        
+
+
+<DIV class="tabcontainer ieclass">
+
+<div id="sb1" class="tabcontent">
+<ul>
+  <li> <%= link_to "Financial info", new_deposit_path %>|</li>
+  <li> <%= link_to "Recuring Payments", new_payment_path  %>|</li>
+  <li> <%= link_to "Payees", payees_path %></li>
+</ul>
+</div>
+</DIV>
+
+
+
+ 
 </div>
 	</div>
 </div>
-    <!--header part End-->
+  </div>  
+  <!--header part End-->
 
 
     <!--containor Part Start-->
