--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,16 @@
     <%= javascript_include_tag :defaults %>
     <%= javascript_include_tag "swfobject" %>
 
+
+    <%= stylesheet_link_tag 'demoStyles' %>
+     <%= stylesheet_link_tag 'jScrollPane' %>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+
+    <%= javascript_include_tag "jquery.mousewheel" %>
+    <%= javascript_include_tag "jScrollPane" %>
+
+
+
    <%= javascript_include_tag "ddtabmenu" %>
     <%#= javascript_include_tag "jquery-1.5.2.min" %>
     <%#= javascript_include_tag "jquery-ui.min" %>
