--- a/public/stylesheets/stylehome.css
+++ b/public/stylesheets/stylehome.css
@@ -2,7 +2,7 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	color: #ffffff;
+	color: #000;
 	background-image: url(/images/imagehome/body_bg.jpg);
 	background-repeat: repeat;
 	margin:0 0 0 0;
