--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
 //SYNTAX: ddtabmenu.definemenu("tab_menu_id", integer OR "auto")
 ddtabmenu.definemenu("ddtabs3", 0) //initialize Tab Menu #3 with 2nd tab selected
 
+jQuery.noConflict();
 
 </script>
   </head>
