--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -6,18 +6,18 @@
 
     <!--containor Part Start-->
  <script type="text/javascript">
-			$(function()
+			jQuery(function()
 			{
 				// this initialises the demo scollpanes on the page.
 				
-				$('#pane3').jScrollPane(
+				jQuery('#pane3').jScrollPane(
 					{
 						showArrows: true,
 						topCapHeight: 30
 					}
 				);
 
-			    $('#pane4').jScrollPane(
+			    jQuery('#pane4').jScrollPane(
 					{
 						showArrows: true,
 						topCapHeight: 30
