--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
 
      <%= stylesheet_link_tag 'demoStyles' %>
      <%= stylesheet_link_tag 'jScrollPane' %>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 
+    <%= javascript_include_tag "jquery-1.4.2.min" %>
     <%= javascript_include_tag "jquery.mousewheel" %>
     <%= javascript_include_tag "jScrollPane" %>
 
