--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,16 +30,31 @@
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
 
+
  <script type="text/javascript">
 //SYNTAX: ddtabmenu.definemenu("tab_menu_id", integer OR "auto")
-ddtabmenu.definemenu("ddtabs3", 0) //initialize Tab Menu #3 with 2nd tab selected
-
+ var controller = "<%= params[:controller] %>"
+ var method = "<%= params[:action] %>"
+if( controller == "payments" && method== "index" ){
+  ddtabmenu.definemenu("ddtabs3", 0) //initialize Tab Menu #3 with 2nd tab selected
+}
+if( controller == "payments" && method== "new" ){
+  ddtabmenu.definemenu("ddtabs3", 0) //initialize Tab Menu #3 with 2nd tab selected
+}
+if( controller == "payees" && method== "index" ){
+  ddtabmenu.definemenu("ddtabs3", 0) //initialize Tab Menu #3 with 2nd tab selected
+}
+if( controller == "deposits" && method== "new" ){
+  ddtabmenu.definemenu("ddtabs3", 0) //initialize Tab Menu #3 with 2nd tab selected
+}
 jQuery.noConflict();
 
 </script>
   </head>
 
   <body>
+
+
 
     <!--header part Start-->
 <div id="header_part">
@@ -83,10 +98,15 @@ jQuery.noConflict();
                   <div id="ddtabs3" class="solidblockmenu">
                  
 			<ul>
-                            <li><%= link_to "Money Momma  Budgeting", payments_path , :rel => "sb1" %></li>
+                            
+                    <% @active_page ||= '' %>
+
+                         
+
+                            <li><%= link_to "Money Momma  Budgeting", payments_path , :rel => "sb1" ,:style => "border-radius: 6px;-moz-border-radius: 6px 0 0  6px;-webkit-border-radius:6px 0 0 6px;	-khtml-border-radius: 6px 0 0 6px;"  , :class => @active_page.starts_with?('payments') ? 'selectagain' : '' %></li>
                             <li><a href="#">Ask Momma</a></li>
-                            <li> <%= link_to "Money Momma Coupons", transactions_path %></li>
-                            <li> <%= link_to "Email Settings", email_alert_users_path , :style => "border-right:none;" %></li>
+                            <li> <%= link_to "Money Momma Coupons", transactions_path , :class => @active_page.starts_with?('transactions') ? 'selectagain' : ''%></li>
+                            <li> <%= link_to "Email Settings", email_alert_users_path , :style => "border-right:none; border-radius: 6px;-moz-border-radius: 0 6px 6px 0; -webkit-border-radius:0  6px 6px 0;	-khtml-border-radius: 0 6px 6px 0;" , :class => @active_page.starts_with?('email') ? 'selectagain' : ''%></li>
 
                         </ul>
 
