--- a/app/views/transactions/index.html.haml
+++ b/app/views/transactions/index.html.haml
@@ -6,3 +6,4 @@ var ci_cap_bannerType = "3";
 var ci_cap_channel = "Money Momma";
 </script>
 <script language="javascript" type="text/javascript" src="http://bc.coupons.com/"></script>
+- @active_page = 'transactions_index'
