--- a/app/views/users/email_alert.html.haml
+++ b/app/views/users/email_alert.html.haml
@@ -1,3 +1,4 @@
+- @active_page = 'email_alert'
 = form_for @user do |f|
   = f.error_messages
   %table{:border => "0", :cellpadding => "0", :cellspacing => "10", :width => "80%"}
