--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -2,7 +2,7 @@
 %html{:xmlns => "http://www.w3.org/1999/xhtml"}
   %head
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
-    %title Welcome
+    %title MyMoneyMomma.com > Start Here
     = stylesheet_link_tag "style", "notice"
     = javascript_include_tag :defaults
     %script{:src => "SpryAssets/SpryValidationTextField.js", :type => "text/javascript"}
