--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -239,7 +239,7 @@
 
           <div class="blank"></div>
 
-          <!--second_right_part_two-->
+          <!--second_right_part_two
 
           <div class="right_second_main">
 
@@ -263,7 +263,7 @@
           </div>
           <!--second_right_part_two-->
 
-          <div class="blank"></div>
+          <!--<div class="blank"></div>-->
 
           <!--third_right_part_One-->
           <div class="right_second_main">
