--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@ jQuery.noConflict();
 <div id="header_part">
 	<div id="header_banner">
     <div class="header_main_containor">
-        	<div class="heder_top_refresh"><img src="images/imagehome/refresh_icon.png"/>Your accounts are all up to date Refresh the page to  get your newst info</div>
+        	<div class="heder_top_refresh"><img src="images/imagehome/refresh_icon.png"/>Your info is all up to date Refresh the page to  get your newest info</div>
             <div class="header_top_link"><a href="#"><img src="images/imagehome/Lock_icon.png" border="0"/></a> <a href="#">Money Momma Safe & Secure</a></div>
 
 
