--- a/app/views/user_mailer/alert_on_paycheck.html.erb.erb
+++ b/app/views/user_mailer/alert_on_paycheck.html.erb.erb
@@ -57,7 +57,7 @@
 
    <tr>
   <td colspan="2" width="630" height="82" background="<%=  ADDRESS_FOR_IMAGES %>/contant_05.jpg">
-  <p style="padding-left:110px; padding-right:110px;"><%= "You have to pay $#{@payments1[0]} after 5 days , then your paycheck amount will be $#{@diffrence}"  %> </p></td>
+  <p style="padding-left:110px; padding-right:110px;"><%= "Your current payments are set for $#{@payments1[0]}, and your net is $#{@diffrence}"  %> </p></td>
   </tr>
 
  <tr>
