--- a/app/views/transactions/ask_momma.html.haml
+++ b/app/views/transactions/ask_momma.html.haml
@@ -36,6 +36,8 @@
     %td
       %a.NormalLink{:href => "javascript:widOpen('transactions/widget/?det08=true')"} Which is better, cash up front or payments over time?
     %td{:width => "20"}
+    %td
+      %a.NormalLink{:href => "javascript:widOpen('http://www.calcxml.com/calculators/home-affordability')"} How Much Home Can I Afford?
   %tr
     %td
       %a.NormalLink{:href => "javascript:widOpen('transactions/widget/?det09=true')"} What is the impact of making extra debt payments?
@@ -43,7 +45,8 @@
   %tr
     %td
       %a.NormalLink{:href => "javascript:widOpen('transactions/widget/?det10=true')"} Should I pay off debts or invest the money?
-      
+    %td{:width => "20"}
+  
       :javascript
         //
           function widOpen(urlMAIN) {
