--- a/app/views/user_mailer/alert_before_paycheck.html.erb
+++ b/app/views/user_mailer/alert_before_paycheck.html.erb
@@ -57,7 +57,7 @@
 
    <tr>
   <td colspan="2" width="630" height="82" background="<%=  ADDRESS_FOR_IMAGES %>/contant_05.jpg">
-  <p style="padding-left:110px; padding-right:110px;"><%= "You have to pay $#{@payments1[0]} after 5 days , then your paycheck amount will be $#{@diffrence}"  %> </p></td>
+  <p style="padding-left:110px; padding-right:110px;"><%= "Your current payments are set for $#{@payments1[0]}, and your net is $#{@diffrence}"  %> </p></td>
   </tr>
 
  <tr>
@@ -66,12 +66,12 @@
   </tr>
 
    <tr>
-  <td colspan="2" width="630" height="61" background="<%=  ADDRESS_FOR_IMAGES %>/contant_070.jpg" style="background-repeat:no-repeat;"><p style="padding-left:120px; padding-right:50px;  color:#FFF;">P.S. Want to achieve your goals faster? Use our NEW goals feature to set goals, track your progress and get customized advice.</p></td>
+  <td colspan="2" width="630" height="61" background="<%=  ADDRESS_FOR_IMAGES %>/contant_070.jpg" style="background-repeat:no-repeat;"><p style="padding-left:120px; padding-right:50px;  color:#FFF;">P.S. Need financial questions answered? Ask Momma for the answer!.</p></td>
   </tr>
 
 
    <tr>
-  <td colspan="2" width="630" height="47" background="<%=  ADDRESS_FOR_IMAGES %>/contant_08.jpg" style="background-repeat:no-repeat;"><span style="padding-left:130px;">P.S. Want to achieve your goals faster? Use our NEW goals feature to set goals,<br /><span style="padding-left:130px;">track your progress and get customized advice.</span></span>
+  <td colspan="2" width="630" height="47" background="<%=  ADDRESS_FOR_IMAGES %>/contant_08.jpg" style="background-repeat:no-repeat;"><span style="padding-left:130px;">P.S. Money Momma has on-line coupon from name brand like Apple, Macy's, Nordstroms as well as print coupons on groceries,<br /><span style="padding-left:130px;"></span></span>
 
   </td>
    </tr>
