--- a/app/views/user_mailer/alert_before_paycheck.html.erb
+++ b/app/views/user_mailer/alert_before_paycheck.html.erb
@@ -71,7 +71,7 @@
 
 
    <tr>
-  <td colspan="2" width="630" height="47" background="<%=  ADDRESS_FOR_IMAGES %>/contant_08.jpg" style="background-repeat:no-repeat;"><span style="padding-left:130px;">P.S. Money Momma has on-line coupon from name brand like Apple, Macy's, Nordstroms as well as print coupons on groceries,<br /><span style="padding-left:130px;"></span></span>
+  <td colspan="2" width="630" height="47" background="<%=  ADDRESS_FOR_IMAGES %>/contant_08.jpg" style="background-repeat:no-repeat;"><span style="padding-left:130px;">P.S. Money Momma has on-line coupons from name brands like Apple, Macy's, <br /><span style="padding-left:130px;"></span>Nordstroms as well as print coupons on groceries</span>
 
   </td>
    </tr>
