chnages for google add

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -34,4 +34,4 @@
   <script type="text/javascript"
   src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
   </script>
-%div{:style=>"clear:both"}
+%br{:style=>"clear:both"}
