--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,5 +1,5 @@
 - @active_page = 'articles'
-%div{:style=>"width:600px;", :align=>"left"}
+%div{:style=>"width:600px;float:left;"}
   %div{:style => "margin-top:10px;"}
     %h1 
       = @article.title
@@ -39,3 +39,16 @@
         %p= f.submit
     
   = link_to "<< back", articles_path
+%div{:style=>"width:200px;float:right;"}
+  <script type="text/javascript"><!--
+  google_ad_client = "ca-pub-4583138266696011";
+  /* first add */
+  google_ad_slot = "8679410634";
+  google_ad_width = 120;
+  google_ad_height = 600;
+  //-->
+  </script>
+  <script type="text/javascript"
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+  </script>
+%br{:style=>"clear:both"}
