--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,8 +72,10 @@ jQuery.noConflict();
 <div id="header_part">
 	<div id="header_banner">
     <div class="header_main_containor">
-        	<div class="heder_top_refresh"><img src="images/imagehome/refresh_icon.png"/>Your info is all up to date Refresh the page to  get your newest info</div>
-            <div class="header_top_link"><a href="#"><img src="images/imagehome/Lock_icon.png" border="0"/></a> <a href="#">Money Momma Safe & Secure</a></div>
+        	<div class="heder_top_refresh"><img src="/images/imagehome/refresh_icon.png"/>Your info is all up to date Refresh the page to  get your newest info</div>
+        	<span style="margin:0px 20px 0px 300px;"><a href="http://twitter.com/mymoneymomma" title="Follow me on Twitter"><img src="/images/newimages/twt.png" alt="Twitter Icon" border="0"/></a></span>
+        	<span><a href="http://www.facebook.com/pages/Money-Momma/170549176356639?sk=app_123848961030369" title="Share on Facebook"><img src="/images/newimages/fb.jpg" alt="Twitter Icon" border="0"/></a></span>
+          <div class="header_top_link"><a href="#"><img src="/images/imagehome/Lock_icon.png" border="0"/></a> <a href="#">Money Momma Safe & Secure</a></div>
 
 
         
@@ -171,7 +173,8 @@ jQuery.noConflict();
 <div class="footer_part">
 	<div class="footer_containor">
 		<div class="footer_link">
-        <a href="#">What is MM?</a> <a href="#">HOW IT WORKS</a> <a href="#">FIND SAVINGS</a> <a href="#">COMMUNITY</a> <a href="#" style="border-right-style:none;">COMPANY</a>
+        <a href="#">What is MM?</a> <a href="#">HOW IT WORKS</a> <a href="#">FIND SAVINGS</a> <a href="#">CONTACT US</a> 
+        <a href="/company" style="border-right-style:none;">COMPANY</a>
     </div>
     <div class="copyright">Copyright © Money momma  2011 All Rights Reserved</div>
   </div>
