--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -136,9 +136,10 @@ jQuery.noConflict();
 
 <div id="sb1" class="tabcontent">
 <ul>
-  <li> <%= link_to "Financial info", new_deposit_path %>|</li>
-  <li> <%= link_to "Recuring Payments", new_payment_path  %>|</li>
-  <li> <%= link_to "Payees", payees_path %></li>
+  <li> <%= link_to "Step 1 => Financial info", new_deposit_path %>|</li>
+ <li> <%= link_to "Step 2 => Payees", payees_path %>|</li>
+  <li> <%= link_to "Step 3 => Recuring Payments", new_payment_path  %></li>
+ 
 </ul>
 </div>
 </DIV>
