--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag "theme", "notice" %>
     <%= javascript_include_tag :defaults %>
     <%= javascript_include_tag "swfobject" %>
+    <%= javascript_include_tag "application" %>
 
 
      <%= stylesheet_link_tag 'demoStyles' %>
@@ -166,20 +167,90 @@ jQuery.noConflict();
 
 
 
-
-
     <!--Footer Part Start-->
 
 <div class="footer_part">
 	<div class="footer_containor">
 		<div class="footer_link">
-        <a href="#">What is MM?</a> <a href="#">HOW IT WORKS</a> <a href="#">FIND SAVINGS</a> <a href="#">CONTACT US</a> 
+        <a href="#">What is MM?</a> <a href="#">HOW IT WORKS</a> <a href="#">FIND SAVINGS</a> 
+        <a href="#?w=500" rel="popup_name" class="poplight">CONTACT US</a> 
         <a href="/company" style="border-right-style:none;">COMPANY</a>
     </div>
     <div class="copyright">Copyright © Money momma  2011 All Rights Reserved</div>
   </div>
 </div>
     <!--Footer Part Start-->
+    <div id="popup_name" class="popup_block">
+        <div class="container">
+          <h2 class='title'>Get In Touch</h2>
+          <div class="body">
+            <div>To know more about our work feel free to contact us. We would love to know how we can help you.</div>
+            <div id='contact_form'>
+              <%= form_tag "/contact" do %>
+              <table>
+                <tr>
+                  <td><label>Name</label></td>
+                  <td><input type="text" name="name" required></td>
+                </tr>
+                <tr>
+                  <td><label>Email</label></td>
+                  <td><input name="email" type="email" required></td>
+                </tr>
+                <tr>
+                  <td valign='top'><label class='top_margin'>Message</label></td>
+                  <td><textarea name="message" required></textarea></td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td><input type='submit' value='Submit' id='submit_btn'></td>
+                </tr>
+              </table>
+              <% end %>
+            </div>
+          </div>
+        </div>
+    </div>
+    <script type="text/javascript"
+    src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
+    <script>
+    
+    $('a.poplight[href^=#]').click(function() {
+        var popID = $(this).attr('rel'); //Get Popup Name
+        var popURL = $(this).attr('href'); //Get Popup href to define size
+
+        //Pull Query & Variables from href URL
+        var query= popURL.split('?');
+        var dim= query[1].split('&');
+        var popWidth = dim[0].split('=')[1]; //Gets the first query string value
+
+        //Fade in the Popup and add close button
+        $('#' + popID).fadeIn().css({ 'width': Number( popWidth ) }).prepend('<a href="#" class="close"><img src="/images/close_pop.png" class="btn_close" title="Close Window" alt="Close" /></a>');
+
+        //Define margin for center alignment (vertical   horizontal) - we add 80px to the height/width to accomodate for the padding  and border width defined in the css
+        var popMargTop = ($('#' + popID).height() + 80) / 2;
+        var popMargLeft = ($('#' + popID).width() + 80) / 2;
+
+        //Apply Margin to Popup
+        $('#' + popID).css({
+            'margin-top' : -popMargTop,
+            'margin-left' : -popMargLeft
+        });
+
+        //Fade in Background
+        $('body').append('<div id="fade"></div>'); //Add the fade layer to bottom of the body tag.
+        $('#fade').css({'filter' : 'alpha(opacity=80)'}).fadeIn(); //Fade in the fade layer - .css({'filter' : 'alpha(opacity=80)'}) is used to fix the IE Bug on fading transparencies 
+
+        return false;
+    });
+
+    //Close Popups and Fade Layer
+    $('a.close, #fade').live('click', function() { //When clicking on the close or fade layer...
+        $('#fade , .popup_block').fadeOut(function() {
+            $('#fade, a.close').remove();  //fade them both out
+        });
+        return false;
+    });
+    </script>
 
   </body>
 </html>
