--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -130,7 +130,7 @@
     </tr>
 
     <tr>
-    <td colspan="4"><table cellpadding="0" cellspacing="0" width="245" height="35" align="left" class="text_content">
+    <td colspan="4"><table cellpadding="0"/Users/marklopez/money/mymoneymomma/app/views/payments/index.html.erb cellspacing="0" width="245" height="35" align="left" class="text_content">
     	<tr><td width="8" height="30"></td>
         <td><b class="space">Amount</td>
         <td align="right" class="right_space"><%= "$#{p.amount}" %></td></tr>
