--- a/app/views/user_mailer/alert_before_paycheck.html.erb
+++ b/app/views/user_mailer/alert_before_paycheck.html.erb
@@ -13,12 +13,12 @@
 <table width="630" border="0" cellspacing="0" cellpadding="0" align="center" style="font-family:Arial, Helvetica, sans-serif; font-size:12px; font-weight:bold; color:#030;">
   <tr>
     <td colspan="2" width="630" height="36" background="<%=  ADDRESS_FOR_IMAGES %>/top.jpg" style="background-repeat:no-repeat;">
-    <p style="font-size:9px; padding-left:260px; margin-bottom:16px;"><a href="http://www.mymoneymomma.com" target="_blank" style="text-decoration:none; color:#030;">MMM Safe &amp; Secure</a></p></td>
+    <p style="font-size:9px; padding-left:260px; margin-bottom:16px;"><a href="http://www.mymoneymomma.com" target="_blank" style="text-decoration:none; color:#030;">Secure</a></p></td>
   </tr>
   <tr>
     <td width="220" height="48" background="<%=  ADDRESS_FOR_IMAGES %>/logo.jpg" style="padding-left:15px;"><a href="http://www.mymoneymomma.com" target="_blank"><img src="<%=  ADDRESS_FOR_IMAGES %>/logo.png" border="0" /></a></td>
     <td width="395" height="40" background="<%=  ADDRESS_FOR_IMAGES %>/see_overview.jpg">
-    <p style="padding-left:100px; margin-bottom:22px; font-size:11px;"><a href="http://www.mymoneymomma.com" target="_blank" style="text-decoration:none; color:#030;">See My OverView</a> &nbsp;|&nbsp; <a href="#" target="_blank" style="text-decoration:none; color:#030;">Find Saving</a></p></td>
+    <p style="padding-left:100px; margin-bottom:22px; font-size:11px;"><a href="http://www.mymoneymomma.com" target="_blank" style="text-decoration:none; color:#030;">OverView</a> &nbsp;|&nbsp; <a href="#" target="_blank" style="text-decoration:none; color:#030;">Saving</a></p></td>
   </tr>
 
   <tr>
