--- a/app/views/user_mailer/alert_before_paycheck.html.erb
+++ b/app/views/user_mailer/alert_before_paycheck.html.erb
@@ -100,9 +100,9 @@
     <tr>
     <td align="center" width="100px;" style="padding-left:10px;">Folllow us on:</td>
     <td>
-    <a href="http://www.mymoneymomma.com" target="_blank"><img src="<%= ADDRESS_FOR_IMAGES %>/fb.jpg" alt="facebook" border="0"/></a>
-    <a href="http://www.mymoneymomma.com" target="_blank"><img src="<%=  ADDRESS_FOR_IMAGES %>/twt.png" alt="twitter" border="0" style="padding-left:8px;" /></a>
-    <a href="http://www.mymoneymomma.com" target="_blank"><img src="<%=  ADDRESS_FOR_IMAGES %>/rss.png" alt="rss" border="0" style="padding-left:8px;" /></a></td>
+    <a href="http://www.facebook.com/pages/Money-Momma/170549176356639?sk=app_123848961030369" target="_blank"><img src="<%= ADDRESS_FOR_IMAGES %>/fb.jpg" alt="facebook" border="0"/></a>
+    <a href="http://twitter.com/mymoneymomma" target="_blank"><img src="<%=  ADDRESS_FOR_IMAGES %>/twt.png" alt="twitter" border="0" style="padding-left:8px;" /></a>
+    </td>
     </tr></table>
 
     </td>
