--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -173,7 +173,7 @@ jQuery.noConflict();
 <div class="footer_part">
 	<div class="footer_containor">
 		<div class="footer_link">
-        <a href="#">What is MM?</a> <a href="#">HOW IT WORKS</a> <a href="#">FIND SAVINGS</a> 
+        <a href="/transactions">FIND SAVINGS</a> 
         <a href="#?w=500" rel="popup_name" class="poplight">CONTACT US</a> 
         <a href="/company" style="border-right-style:none;">COMPANY</a>
     </div>
@@ -183,9 +183,9 @@ jQuery.noConflict();
     <!--Footer Part Start-->
     <div id="popup_name" class="popup_block">
         <div class="container">
-          <h2 class='title'>Get In Touch</h2>
+          <h2 class='title'>Talk to Momma</h2>
           <div class="body">
-            <div>To know more about our work feel free to contact us. We would love to know how we can help you.</div>
+            <div>Feel free to contact us. We would love to know how we can help you.</div>
             <div id='contact_form'>
               <%= form_tag "/contact" do %>
               <table>
