--- a/app/views/transactions/company.html.haml
+++ b/app/views/transactions/company.html.haml
@@ -1,20 +1,11 @@
 %div{:style=>"width:600px;float:left;"}
-  %h1 How Money Momma Started
+  %h3 How Money Momma Started
   %p In 2011, while catching up with some friends and discussing the current state of the economy, Mark Lopez realized that there is a real need for a service to provide everyday common sense financial advice and savings. The kind of advice that only a mother will give. So that day he began developing Money Momma
-  %h1 The Vision…
+  %h3 The Vision…
   %p Mark is currently a graduate student studying Predictive Analytics at Northwestern University and his vision is to utilize technology to build a Money Momma that will be able to provide the best financial advice on the planet.
-  %h1 A Movement that has just begun….
+  %h3 A Movement that has just begun….
   %p Money Momma is a movement for all to start saving money and make the best possible choices to live the best financial life possible.
 %div{:style=>"width:200px;float:right;"}
-  <script type="text/javascript"><!--
-  google_ad_client = "ca-pub-4583138266696011";
-  /* first add */
-  google_ad_slot = "8679410634";
-  google_ad_width = 120;
-  google_ad_height = 600;
-  //-->
-  </script>
-  <script type="text/javascript"
-  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-  </script>
+  <a href="http://www.anrdoezrs.net/click-4636048-10865550" target="_top">
+<img src="http://www.tqlkg.com/image-4636048-10865550" width="160" height="600" alt="" border="0"/></a>
 %br{:style=>"clear:both"}
