--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -19,4 +19,4 @@
   
 = link_to 'Edit', edit_user_path(@user)
 
-= button_to('Share FourSquare', @merchant.authorize_url('http://localhost:3000/users/foursquare_callback'), :confirm => 'Are you sure?')
+= button_to('Share FourSquare', @merchant.authorize_url(CALLBACK_URL), :confirm => 'Are you sure?')
