--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,10 +77,9 @@ jQuery.noConflict();
         	<span style="margin:0px 20px 0px 300px;"><a href="http://twitter.com/mymoneymomma" title="Follow me on Twitter"><img src="/images/newimages/twt.png" alt="Twitter Icon" border="0"/></a></span>
         	<span><a href="http://www.facebook.com/pages/Money-Momma/170549176356639?sk=app_123848961030369" title="Share on Facebook"><img src="/images/newimages/fb.jpg" alt="Twitter Icon" border="0"/></a></span>
           <div class="header_top_link"><a href="#"><img src="/images/imagehome/Lock_icon.png" border="0"/></a> <a href="#">Money Momma Safe & Secure</a></div>
-
-
-        
-
+          <% if current_user %>
+            <%= render 'shared/share_fb' %>
+          <% end %>
 
             <div id="logo_base">
             <div class="logo_part"><%=link_to image_tag("/images/imagehome/logo_.png"), "/"%></div>
